--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
+    "react-flexbox-grid": "^1.0.2",
     "react-router-dom": "^4.1.1",
     "react-select": "^1.0.0-rc.3",
     "style-loader": "0.13.1",
