--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cfn-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://prilutskiy.github.io/cfn-ui",
   "devDependencies": {
     "autoprefixer": "6.7.2",
     "babel-core": "6.22.1",
@@ -28,6 +29,7 @@
     "file-loader": "0.10.0",
     "font-awesome": "^4.7.0",
     "fs-extra": "0.30.0",
+    "gh-pages": "^0.12.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.3",
     "jest": "18.1.0",
@@ -55,7 +57,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
