--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
+    "chart.js": "^2.5.0",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.1",
@@ -39,6 +40,7 @@
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
+    "react-chartjs-2": "^2.0.5",
     "react-dev-utils": "^0.5.2",
     "react-flexbox-grid": "^1.0.2",
     "react-router-dom": "^4.1.1",
