--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-chartjs-2": "^2.0.5",
     "react-dev-utils": "^0.5.2",
     "react-flexbox-grid": "^1.0.2",
-    "react-router-dom": "^4.1.1",
+    "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.3",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
