--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "haze-ui",
   "main": "build/dist/haze-ui.js",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "homepage": "http://prilutskiy.github.io/haze-ui",
   "devDependencies": {
     "autoprefixer": "6.7.2",
@@ -45,6 +45,7 @@
     "react-flexbox-grid": "^1.0.2",
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.3",
+    "react-select2-wrapper": "^1.0.4-beta4",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
