--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "haze-ui",
   "main": "build/dist/haze-ui.js",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "homepage": "http://prilutskiy.github.io/haze-ui",
   "devDependencies": {
     "autoprefixer": "6.7.2",
@@ -52,9 +52,11 @@
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.2"
+    "whatwg-fetch": "2.0.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
